<resources>
    <string name="app_name">Elrond Android Sdk Sample App</string>
    <string name="wallet">Wallet</string>
    <string name="mnemonic">Mnemonic</string>
    <string name="importWallet">Import wallet</string>
    <string name="transaction">Transaction</string>
    <string name="sendTransaction">Send transaction</string>
    <string name="your_wallet">Your wallet</string>
    <string name="balance">Balance</string>
    <string name="nonce">Nonce</string>
    <string name="address">Address</string>
    <string name="generate_mnemonic">Generate mnemonic</string>
    <string name="invalidMnemonic">Invalid mnemonic</string>
    <string name="disconnect_wallet">Disconnect wallet</string>
    <string name="destination">Destination</string>
    <string name="to">To</string>
    <string name="amount">Amount</string>
    <string name="message">Message</string>
    <string name="enter_24_words">Please enter 24 words</string>
    <string name="invalidAddress">Invalid Address</string>
    <string name="tx">Tx</string>
    <string name="status">Status</string>
</resources>